# flappy-bull

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  LANDING.md  PRD.md  README.md  ROADMAP.md  flappy-bull.md  package-lock.json  package.json  tsconfig.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/public/: privacy.html  terms.html
app/public/.well-known/: assetlinks.json
app/src/: App.tsx  index.css  main.tsx  router.tsx
app/src/components/: DelegateTest.tsx  GameCanvas.tsx  GameShell.tsx  PixiCanvas.tsx  PriceDisplay.tsx  ResultScreen.tsx  StartScreen.tsx  WalletButton.tsx
app/src/context/: GameSessionContext.tsx
app/src/game/: constants.ts  physics.ts  simCore.ts
app/src/hooks/: useGameSession.ts  useLeaderboard.ts  usePriceChannel.ts  usePriceOracle.ts
programs/flappy-bull/: Cargo.toml
programs/flappy-bull/src/: lib.rs
relayer/: .gitignore  README.md  package.json  tsconfig.json  wrangler.toml
relayer/idl/: flappy_bull.json
relayer/src/: index.ts
scripts/: README.md  convert-idl.py  deploy-devnet.sh  idl-to-ts.mjs  init-program.mjs
seeker/: .gitignore  LISTING.md  README.md  SUBMIT.md  gradle.properties  manifest-checksum.txt  twa-manifest.json
seeker/app/: build.gradle
sim-core/: Cargo.toml
sim-core/src/: flags.rs  lib.rs
sim-core/tests/: golden_vectors.rs  strict_nonce.rs  unit_tests.rs  wasm_identity.rs
sim-core/tests/golden/: basic_survival.json  death_ceiling.json  death_floor.json  long_run.json  modulo_wrap.json  tap_boundary.json
tests/: flappy-bull.ts
(+35 files in other folders)
