[package]
name = "flappy-bull"
version = "0.1.0"
description = "Flappy Bull game session program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flappy_bull"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.14.3", features = ["anchor"] }
